--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
 "predeploy": "npm run build",
 "deploy": "gh-pages -d build"
